Use github for comparch repo.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,7 +9,7 @@ auto-checkout = comparch
 [versions]
 
 [sources]
-comparch = git ssh://faassen@startifact.com/home/faassen/comparch.git
+comparch = git git@github.com:cslab/comparch.git
 
 [devpython]
 recipe = zc.recipe.egg
