Sphinx docs skeleton.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 develop = .
-parts = devpython scripts
+parts = devpython scripts sphinxbuilder
 versions = versions
 show-picked-versions = true
 extensions = mr.developer
@@ -21,3 +21,8 @@ eggs = morepath
 recipe = zc.recipe.egg:scripts
 eggs = morepath [test]
        pytest
+
+[sphinxbuilder]
+recipe = collective.recipe.sphinxbuilder
+source = ${buildout:directory}/doc
+build = ${buildout:directory}/doc/build
