Use newer venusian to get ignore behavior.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,7 @@ extensions = mr.developer
 auto-checkout = comparch
 
 [versions]
+venusian = 1.0a8
 
 [sources]
 comparch = git git@github.com:cslab/comparch.git
