Adjusted to flake8.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,6 +17,7 @@ recipe = zc.recipe.egg
 interpreter = devpython
 eggs = morepath
        pyflakes
+       flake8
 
 [scripts]
 recipe = zc.recipe.egg:scripts
