Use reg instead of comparch.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,13 +4,13 @@ parts = devpython scripts sphinxbuilder
 versions = versions
 show-picked-versions = true
 extensions = mr.developer
-auto-checkout = comparch
+auto-checkout = reg
 
 [versions]
 venusian = 1.0a8
 
 [sources]
-comparch = git git@github.com:cslab/comparch.git
+reg = git git@github.com:morepath/reg.git
 
 [devpython]
 recipe = zc.recipe.egg
