Use main branch of reg as noiface branch was merged.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,7 +10,7 @@ auto-checkout = reg
 venusian = 1.0a8
 
 [sources]
-reg = git git@github.com:morepath/reg.git branch=noiface
+reg = git git@github.com:morepath/reg.git
 
 [devpython]
 recipe = zc.recipe.egg
