Add snot support.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,6 +23,7 @@ eggs = morepath
 recipe = zc.recipe.egg:scripts
 eggs = morepath [test]
        pytest
+       snot
 
 [sphinxbuilder]
 recipe = collective.recipe.sphinxbuilder
