An attempt to automatically find all packages that depend on morepath.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,13 @@
 [buildout]
-develop = .
-parts = devpython scripts sphinxbuilder
+develop =
+  .
+  fixture_packages/base
+  fixture_packages/sub
+  fixture_packages/no_mp
+  fixture_packages/no_mp_sub
+  fixture_packages/ns
+  fixture_packages/no_mp_ns
+parts = devpython py.test sphinxbuilder
 versions = versions
 show-picked-versions = true
 extensions = mr.developer
@@ -15,16 +22,22 @@ reg = git git@github.com:morepath/reg.git
 [devpython]
 recipe = zc.recipe.egg
 interpreter = devpython
-eggs = morepath
+eggs = morepath [test]
        pyflakes
        flake8
 
-[scripts]
-recipe = zc.recipe.egg:scripts
-eggs = morepath [test]
+[py.test]
+recipe = zc.recipe.egg
+eggs = morepath
+       morepath[test]
        pytest
        snot
-
+       base
+       sub
+       no_mp
+       no_mp_sub
+       ns
+       no_mp_ns
 [sphinxbuilder]
 recipe = collective.recipe.sphinxbuilder
 source = ${buildout:directory}/doc
