Start Morepath API docs.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,7 +7,7 @@ develop =
   fixture_packages/no_mp_sub
   fixture_packages/ns
   fixture_packages/no_mp_ns
-parts = devpython py.test sphinxbuilder
+parts = devpython py.test sphinxpython sphinxbuilder
 versions = versions
 show-picked-versions = true
 extensions = mr.developer
@@ -38,7 +38,14 @@ eggs = morepath
        no_mp_sub
        ns
        no_mp_ns
+
 [sphinxbuilder]
 recipe = collective.recipe.sphinxbuilder
 source = ${buildout:directory}/doc
 build = ${buildout:directory}/doc/build
+interpreter = ${buildout:directory}/bin/sphinxpython
+
+[sphinxpython]
+recipe = zc.recipe.egg
+interpreter = ${:_buildout_section_name_}
+eggs = morepath
