--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,12 @@
 [tox]
-envlist = py27,py33
+envlist = py27,pypy
 [testenv]
-deps=pytest fixture_packages:base fixture_packages:sub fixture_packages:no_mp fixture_packages:no_mp_sub fixture_packages:ns fixture_packages:no_mp_ns
+deps=
+     -e{toxinidir}[test]
+     -e{toxinidir}/fixture_packages/base
+     -e{toxinidir}/fixture_packages/sub
+     -e{toxinidir}/fixture_packages/no_mp
+     -e{toxinidir}/fixture_packages/no_mp_sub
+     -e{toxinidir}/fixture_packages/ns
+     -e{toxinidir}/fixture_packages/no_mp_ns
 commands=py.test morepath
