increase coverage for autosetup, finding several bugs along the way!

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ develop =
   fixture_packages/no_mp
   fixture_packages/no_mp_sub
   fixture_packages/ns
+  fixture_packages/ns2
   fixture_packages/no_mp_ns
 parts = devpython py.test sphinxpython sphinxbuilder
 versions = versions
@@ -38,6 +39,7 @@ eggs = morepath
        no_mp
        no_mp_sub
        ns
+       ns2
        no_mp_ns
 
 [sphinxbuilder]
