Add missing package fixture.

--- a/tox.ini
+++ b/tox.ini
@@ -9,4 +9,5 @@ deps=
      -e{toxinidir}/fixture_packages/no_mp_sub
      -e{toxinidir}/fixture_packages/ns
      -e{toxinidir}/fixture_packages/no_mp_ns
+     -e{toxinidir}/fixture_packages/ns2
 commands=py.test morepath
