--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,7 +8,7 @@ develop =
   fixture_packages/ns
   fixture_packages/ns2
   fixture_packages/no_mp_ns
-parts = devpython py.test sphinxpython sphinxbuilder
+parts = devpython py.test sphinxpython sphinxbuilder releaser
 versions = versions
 show-picked-versions = true
 extensions = mr.developer
@@ -52,3 +52,8 @@ interpreter = ${buildout:directory}/bin/sphinxpython
 recipe = zc.recipe.egg
 interpreter = ${:_buildout_section_name_}
 eggs = morepath
+
+[releaser]
+recipe = zc.recipe.egg
+eggs = zest.releaser
+~
