--- a/buildout.cfg
+++ b/buildout.cfg
@@ -52,6 +52,7 @@ interpreter = ${buildout:directory}/bin/sphinxpython
 recipe = zc.recipe.egg
 interpreter = ${:_buildout_section_name_}
 eggs = morepath
+       sphinxcontrib.youtube
 
 [releaser]
 recipe = zc.recipe.egg
