Add a whole bunch of code review tools.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -27,6 +27,11 @@ eggs = morepath [test]
        pyflakes
        flake8
        radon
+       pylint
+       pep257
+       pyroma
+       dodgy
+       prospector
 
 [py.test]
 recipe = zc.recipe.egg
