Let flake8 ignore classes that start with lowercase, as a lot of tests make use of these.

--- a/tox.ini
+++ b/tox.ini
@@ -11,3 +11,6 @@ deps=
      -e{toxinidir}/fixture_packages/no_mp_ns
      -e{toxinidir}/fixture_packages/ns2
 commands=py.test morepath
+
+[flake8]
+ignore = N801
