--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,7 +18,7 @@ auto-checkout = reg
 venusian = 1.0a8
 
 [sources]
-reg = git git@github.com:morepath/reg.git branch=neopredicate
+reg = git git@github.com:morepath/reg.git
 
 [devpython]
 recipe = zc.recipe.egg
