Fix test module names in buildout.
Tox picked them up correctly, buildout needs this adjustment.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -42,8 +42,8 @@ eggs = morepath
        sub
        no_mp
        no_mp_sub
-       ns
-       ns2
+       ns.real
+       ns.real2
        no_mp_ns
 
 [sphinxbuilder]
