Adds morepath tox to Travis CI.
- Also adds pep8 to tox.
- Fixes existing pep8 errors.

See #325.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,pypy,py33,py34
+envlist = py27,pypy,py33,py34,pep8
 [testenv]
 deps=
      -e{toxinidir}[test]
@@ -11,6 +11,13 @@ deps=
      -e{toxinidir}/fixture_packages/no_mp_ns
      -e{toxinidir}/fixture_packages/ns2
 commands=py.test morepath {posargs}
+
+[testenv:pep8]
+basepython = python2
+deps = {[testenv]deps}
+       flake8
+
+commands = flake8 morepath
 
 [flake8]
 ignore = N801
