Gives 3rd party modules the ability to define the module name morepath should use during autoconfig.
Also adds a configuration section to the Morepath docs.

See #319.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,7 @@ develop =
   fixture_packages/ns
   fixture_packages/ns2
   fixture_packages/no_mp_ns
+  fixture_packages/entry-point
 parts = devpython py.test sphinxpython sphinxbuilder releaser
 versions = versions
 show-picked-versions = true
@@ -45,6 +46,7 @@ eggs = morepath
        ns.real
        ns.real2
        no_mp_ns
+       entry-point
 
 [sphinxbuilder]
 recipe = collective.recipe.sphinxbuilder
