Add a test to demonstrate #334 and fixes issue #334. Took the opportunity to modernize the way apps were created in fixtures, which was severely out of date.

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ deps=
      -e{toxinidir}/fixture_packages/no_mp_ns
      -e{toxinidir}/fixture_packages/ns2
      -e{toxinidir}/fixture_packages/entry-point
+     -e{toxinidir}/fixture_packages/under_score
 commands=py.test morepath --cov morepath {posargs}
 
 [testenv:pep8]
