--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ develop =
   fixture_packages/ns2
   fixture_packages/no_mp_ns
   fixture_packages/entry-point
+  fixture_packages/under_score
 parts = devpython py.test sphinxpython sphinxbuilder releaser
 versions = versions
 show-picked-versions = true
@@ -40,6 +41,7 @@ eggs = morepath
        pytest
        snot
        base
+       under_score
        sub
        no_mp
        no_mp_sub
