Always install the latest pip/setuptools release before running the tests

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,10 @@ deps=
      -e{toxinidir}/fixture_packages/ns2
      -e{toxinidir}/fixture_packages/entry-point
      -e{toxinidir}/fixture_packages/under_score
-commands=py.test morepath --cov morepath {posargs}
+commands=
+     pip install --upgrade pip
+     pip install --upgrade setuptools
+     py.test morepath --cov morepath {posargs}
 
 [testenv:pep8]
 basepython = python2
