Add dectate as a dependency, drop venusian/venusifork.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,13 +14,14 @@ parts = devpython py.test sphinxpython sphinxbuilder releaser
 versions = versions
 show-picked-versions = true
 extensions = mr.developer
-auto-checkout = reg
+auto-checkout = reg dectate
 
 [versions]
 venusian = 1.0a8
 
 [sources]
 reg = git git@github.com:morepath/reg.git
+dectate = git git@github.com:morepath/dectate.git
 
 [devpython]
 recipe = zc.recipe.egg
