Start to provide importscan functionality.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,7 @@ parts = devpython py.test sphinxpython sphinxbuilder releaser
 versions = versions
 show-picked-versions = true
 extensions = mr.developer
-auto-checkout = reg dectate
+auto-checkout = reg dectate importscan
 
 [versions]
 venusian = 1.0a8
@@ -22,6 +22,7 @@ venusian = 1.0a8
 [sources]
 reg = git git@github.com:morepath/reg.git
 dectate = git git@github.com:morepath/dectate.git
+importscan = git git@github.com:faassen/importscan.git
 
 [devpython]
 recipe = zc.recipe.egg
