--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,pypy,py33,py34,pep8
+envlist = py27,pypy,py33,py34,pep8,coverage
 [testenv]
 deps=
      -e{toxinidir}[test]
@@ -15,7 +15,7 @@ deps=
 commands=
      pip install --upgrade pip
      pip install --upgrade setuptools
-     py.test morepath --cov morepath {posargs}
+     py.test morepath {posargs}
 
 [testenv:pep8]
 basepython = python2
@@ -23,6 +23,13 @@ deps = {[testenv]deps}
        flake8
 
 commands = flake8 morepath
+
+[testenv:coverage]
+basepython = python2
+deps = {[testenv]deps}
+       coveralls
+
+commands = py.test morepath --cov morepath {posargs}
 
 [flake8]
 ignore = N801
