Adds doctests to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,pypy,py33,py34,pep8,coverage
+envlist = py27,pypy,py33,py34,pep8,coverage,docs
 [testenv]
 deps=
      -e{toxinidir}[test]
@@ -30,6 +30,13 @@ deps = {[testenv]deps}
        coveralls
 
 commands = py.test morepath --cov morepath {posargs}
+
+[testenv:docs]
+basepython = python2
+deps = {[testenv]deps}
+       sphinx
+
+commands = sphinx-build -b doctest doc {envtmpdir}
 
 [flake8]
 ignore = N801
