Have buildout use test dependencies for sphinx in order to run doctests.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -60,7 +60,7 @@ interpreter = ${buildout:directory}/bin/sphinxpython
 [sphinxpython]
 recipe = zc.recipe.egg
 interpreter = ${:_buildout_section_name_}
-eggs = morepath
+eggs = morepath[test]
 
 [releaser]
 recipe = zc.recipe.egg
