Add tests for loading settings from JSON and YAML config files

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps=
      -e{toxinidir}/fixture_packages/ns2
      -e{toxinidir}/fixture_packages/entry-point
      -e{toxinidir}/fixture_packages/under_score
+     pyyaml
 commands=
      pip install --upgrade pip
      pip install --upgrade setuptools
