Add tox environment for doctests with Python 3

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,pypy,py33,py34,pep8,coverage,docs
+envlist = py27,pypy,py33,py34,pep8,coverage,docs2,docs3
 [testenv]
 deps=
      -e{toxinidir}[test]
@@ -31,8 +31,15 @@ deps = {[testenv]deps}
 
 commands = py.test morepath --cov morepath {posargs}
 
-[testenv:docs]
+[testenv:docs2]
 basepython = python2
+deps = {[testenv]deps}
+       sphinx
+
+commands = sphinx-build -b doctest doc {envtmpdir}
+
+[testenv:docs3]
+basepython = python3
 deps = {[testenv]deps}
        sphinx
 
