Reverse adding Python 3.4 doctests

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,pypy,py33,py34,pep8,coverage,docs27,docs34
+envlist = py27,pypy,py33,py34,pep8,coverage,docs
 [testenv]
 deps=
      -e{toxinidir}[test]
@@ -31,17 +31,11 @@ deps = {[testenv]deps}
 
 commands = py.test morepath --cov morepath {posargs}
 
-[testenv:docs27]
-basepython = python2.7
+[testenv:docs]
+basepython = python2
 deps = {[testenv]deps}
        sphinx
-
-commands = sphinx-build -b doctest doc {envtmpdir}
-
-[testenv:docs34]
-basepython = python3.4
-deps = {[testenv]deps}
-       sphinx
+       pyyaml
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
