--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ env:
     - TOXENV=py33
     - TOXENV=py34
     - TOXENV=pypy
-    - TOXENV=docs27
-    - TOXENV=docs34
+    - TOXENV=docs
     - TOXENV=pep8
     - TOXENV=coverage
 install:
