Add tox environment for doctests with Python 3.4

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,pypy,py33,py34,pep8,coverage,docs
+envlist = py27,pypy,py33,py34,pep8,coverage,docs27,docs34
 [testenv]
 deps=
      -e{toxinidir}[test]
@@ -31,8 +31,15 @@ deps = {[testenv]deps}
 
 commands = py.test morepath --cov morepath {posargs}
 
-[testenv:docs]
-basepython = python2
+[testenv:docs27]
+basepython = python2.7
+deps = {[testenv]deps}
+       sphinx
+
+commands = sphinx-build -b doctest doc {envtmpdir}
+
+[testenv:docs34]
+basepython = python3.4
 deps = {[testenv]deps}
        sphinx
 
