--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ env:
     - TOXENV=py33
     - TOXENV=py34
     - TOXENV=pypy
-    - TOXENV=docs
+    - TOXENV=docs27
+    - TOXENV=docs34
     - TOXENV=pep8
     - TOXENV=coverage
 install:
