Make Python 3.5 the default testing environment

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,pypy,py33,py34,pep8,coverage,docs
+envlist = py27,pypy,py33,py34,py35,pep8,coverage,docs
 [testenv]
 deps=
      -e{toxinidir}[test]
@@ -32,7 +32,7 @@ deps = {[testenv]deps}
 commands = py.test morepath --cov morepath {posargs}
 
 [testenv:docs]
-basepython = python2
+basepython = python3.5
 deps = {[testenv]deps}
        sphinx
 
