lock down twine so that zest.releaser doesn't break.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,6 +17,7 @@ extensions = mr.developer
 auto-checkout = reg dectate importscan
 
 [versions]
+twine = 1.6.5
 
 [sources]
 reg = git git@github.com:morepath/reg.git
