--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
-include *.txt *.rst *.cfg *.py *.ini
-exclude .installed.cfg
-recursive-include morepath *.py
+include *.txt *.rst *.cfg *.py *.ini .coveragerc
+exclude .*.cfg
+recursive-include morepath *.py *.format
 recursive-include tests *.py
-recursive-include doc *.rst Makefile *.py *.bat
+recursive-include doc *.rst Makefile *.py *.bat *.json *.yml
+recursive-include fixture_packages *.py
