Hackfest to try to make tests pass. Some do now.
Some observations:

* we always need to register in the context of the class being operated
  on, *not* the class that we got the dispatch function from.

* we cannot access any Reg methods from the partial-applied bound
  method simulation. We do a work around with exception handling where
  we need it.

The "registration on context class" would be easier if we maintained
a separate registry with the dispatch functions as suggested by
@taschini. But in that case whenever we need a special Reg facility
we need to go through this registry, plus we'd have extra indirection
just to bind 'app' as the first argument.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,7 +20,7 @@ auto-checkout = reg dectate importscan
 twine = 1.6.5
 
 [sources]
-reg = git git@github.com:morepath/reg.git branch=dispatchmethods
+reg = git git@github.com:morepath/reg.git branch=decoupling
 dectate = git git@github.com:morepath/dectate.git
 importscan = git git@github.com:faassen/importscan.git
 
