Use Dectate from repository.

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist = py27,pypy,py33,py34,py35,pep8,coverage,docs
 [testenv]
 deps=git+https://github.com/taschini/reg.git@decoupling#egg=reg
+     git+https://github.com/morepath/dectate.git#egg=dectate
      -e{toxinidir}[test]
      -e{toxinidir}/fixture_packages/base
      -e{toxinidir}/fixture_packages/sub
