--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,29 @@
-bin
-parts
-.installed.cfg
-develop-eggs
-src
-.mr.developer.cfg
-doc/build
-.coverage
-htmlcov
-.tox
-.cache
-build/
-dist/
-eggs/
-*.pyc
-*.pyo
-*.egg-info
+# Byte-compiled / optimized
+__pycache__/
+*.py[co]
+
+# Distribution / packaging
+*.egg-info/
+/build/
+/dist/
+
+# Virtualenv
+/env/
+
+# Buildout
+/bin/
+/develop-eggs/
+/eggs/
+/src/
+/parts/
+/.installed.cfg
+/.mr.developer.cfg
+
+# Unit test / coverage reports
+.cache/
+/.coverage
+/htmlcov
+/.tox
+
+# Sphinx documentation
+/doc/build/
