Refactor dependency declaration

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,10 @@
 [tox]
 envlist = py27,pypy,py33,py34,py35,pep8,coverage,docs
+skipsdist = True
+skip_missing_interpreters = True
 [testenv]
-deps=git+https://github.com/morepath/reg.git
-     git+https://github.com/morepath/dectate.git
+usedevelop = True
+deps=
      -e{toxinidir}[test]
      -e{toxinidir}/fixture_packages/base
      -e{toxinidir}/fixture_packages/sub
@@ -13,29 +15,29 @@ deps=git+https://github.com/morepath/reg.git
      -e{toxinidir}/fixture_packages/ns2
      -e{toxinidir}/fixture_packages/entry-point
      -e{toxinidir}/fixture_packages/under_score
-commands=
+commands =
      pip install --upgrade pip
      pip install --upgrade setuptools
      py.test morepath {posargs}
 
 [testenv:pep8]
 basepython = python3.5
-deps = {[testenv]deps}
-       flake8
+deps = -e{toxinidir}[pep8]
+usedevelop = False
 
-commands = flake8 morepath
+commands = flake8 --show-source morepath setup.py
 
 [testenv:coverage]
 basepython = python3.5
-deps = {[testenv]deps}
-       coveralls
+deps = -e{toxinidir}[test,coverage]
 
-commands = py.test morepath --cov morepath {posargs}
+commands =
+    coverage run --source morepath -m py.test {posargs}
+    coverage report -m
 
 [testenv:docs]
 basepython = python3.5
-deps = {[testenv]deps}
-       sphinx
+deps = -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
