A few tweaks to make sure pytest 3 doesn't trigger problems.
Also make sure dectate is installed from the checkout; somehow
it wasn't when I did another buildout.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,6 +18,8 @@ auto-checkout = reg dectate importscan
 
 [versions]
 twine = 1.6.5
+pytest = 2.9.2
+dectate =
 
 [sources]
 reg = git git@github.com:morepath/reg.git branch=decoupling
