Not the decoupling branch anymore.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,7 +22,7 @@ pytest = 2.9.2
 dectate =
 
 [sources]
-reg = git git@github.com:morepath/reg.git branch=decoupling
+reg = git git@github.com:morepath/reg.git
 dectate = git git@github.com:morepath/dectate.git
 importscan = git git@github.com:faassen/importscan.git
 
