No decoupling here.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist = py27,pypy,py33,py34,py35,pep8,coverage,docs
 [testenv]
-deps=git+https://github.com/morepath/reg.git@decoupling#egg=reg
+deps=git+https://github.com/morepath/reg.git
      git+https://github.com/morepath/dectate.git
      -e{toxinidir}[test]
      -e{toxinidir}/fixture_packages/base
