Implementing doc review by faassen

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands =
      pip install --upgrade setuptools
      py.test morepath {posargs}
 
+# Flake8 tests in Python 3.5 environment
 [testenv:pep8]
 basepython = python3.5
 deps = -e{toxinidir}[pep8]
@@ -27,6 +28,7 @@ usedevelop = False
 
 commands = flake8 --show-source morepath setup.py
 
+# Coverage test for py.test in Python 3.5 environment
 [testenv:coverage]
 basepython = python3.5
 deps = -e{toxinidir}[test,coverage]
@@ -35,6 +37,7 @@ commands =
     coverage run --source morepath -m py.test {posargs}
     coverage report -m
 
+# Doctests in Python 3.5 environment
 [testenv:docs]
 basepython = python3.5
 deps = -e{toxinidir}[docs]
