Fix coverage testenv

--- a/tox.ini
+++ b/tox.ini
@@ -4,17 +4,16 @@ skipsdist = True
 skip_missing_interpreters = True
 [testenv]
 usedevelop = True
-deps=
-     -e{toxinidir}[test]
-     -e{toxinidir}/fixture_packages/base
-     -e{toxinidir}/fixture_packages/sub
-     -e{toxinidir}/fixture_packages/no_mp
-     -e{toxinidir}/fixture_packages/no_mp_sub
-     -e{toxinidir}/fixture_packages/ns
-     -e{toxinidir}/fixture_packages/no_mp_ns
-     -e{toxinidir}/fixture_packages/ns2
-     -e{toxinidir}/fixture_packages/entry-point
-     -e{toxinidir}/fixture_packages/under_score
+deps = -e{toxinidir}[test]
+       -e{toxinidir}/fixture_packages/base
+       -e{toxinidir}/fixture_packages/sub
+       -e{toxinidir}/fixture_packages/no_mp
+       -e{toxinidir}/fixture_packages/no_mp_sub
+       -e{toxinidir}/fixture_packages/ns
+       -e{toxinidir}/fixture_packages/no_mp_ns
+       -e{toxinidir}/fixture_packages/ns2
+       -e{toxinidir}/fixture_packages/entry-point
+       -e{toxinidir}/fixture_packages/under_score
 commands =
      pip install --upgrade pip
      pip install --upgrade setuptools
@@ -31,7 +30,8 @@ commands = flake8 --show-source morepath setup.py
 # Coverage test for py.test in Python 3.5 environment
 [testenv:coverage]
 basepython = python3.5
-deps = -e{toxinidir}[test,coverage]
+deps = {[testenv]deps}
+       -e{toxinidir}[coverage]
 
 commands =
     coverage run --source morepath -m py.test {posargs}
@@ -48,4 +48,4 @@ commands = sphinx-build -b doctest doc {envtmpdir}
 ignore = N801
 
 [pytest]
-testpaths = morepath
+testpaths = morepath src/reg/reg src/dectate/dectate src/importscan/importscan
