Temporarely using Reg and Dectate master branch

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@ skipsdist = True
 skip_missing_interpreters = True
 [testenv]
 usedevelop = True
-deps = -e{toxinidir}[test]
+deps = git+https://github.com/morepath/reg.git
+       git+https://github.com/morepath/dectate.git
+       -e{toxinidir}[test]
        -e{toxinidir}/fixture_packages/base
        -e{toxinidir}/fixture_packages/sub
        -e{toxinidir}/fixture_packages/no_mp
@@ -34,13 +36,15 @@ deps = {[testenv]deps}
        -e{toxinidir}[coverage]
 
 commands =
-    coverage run --source morepath -m py.test {posargs}
+    coverage run --source morepath -m py.test morepath {posargs}
     coverage report -m
 
 # Doctests in Python 3.5 environment
 [testenv:docs]
 basepython = python3.5
-deps = -e{toxinidir}[docs]
+deps = git+https://github.com/morepath/reg.git
+       git+https://github.com/morepath/dectate.git
+       -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
