Some corrections proposed by faassen

--- a/tox.ini
+++ b/tox.ini
@@ -52,4 +52,4 @@ commands = sphinx-build -b doctest doc {envtmpdir}
 ignore = N801
 
 [pytest]
-testpaths = morepath src/reg/reg src/dectate/dectate src/importscan/importscan
+testpaths = morepath
