Make the coverage test fail under 100% and remove coveralls

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ deps = {[testenv]deps}
 
 commands =
     coverage run --source morepath -m py.test morepath {posargs}
-    coverage report -m
+    coverage report -m --fail-under=100
 
 # Doctests in Python 3.5 environment
 [testenv:docs]
