Move git urls of reg and dectate from tox to travis

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,7 @@ skip_missing_interpreters = True
 
 [testenv]
 usedevelop = True
-deps = git+https://github.com/morepath/reg.git
-       git+https://github.com/morepath/dectate.git
-       -e{toxinidir}[test]
+deps = -e{toxinidir}[test]
        -e{toxinidir}/fixture_packages/base
        -e{toxinidir}/fixture_packages/sub
        -e{toxinidir}/fixture_packages/no_mp
@@ -40,9 +38,7 @@ commands =
 
 [testenv:docs]
 basepython = python3.5
-deps = git+https://github.com/morepath/reg.git
-       git+https://github.com/morepath/dectate.git
-       -e{toxinidir}[docs]
+deps = -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
