--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ sudo: false
 language: python
 
 python: 3.5
+cache: pip
 env:
     - TOXENV=py27
     - TOXENV=py33
@@ -12,6 +13,6 @@ env:
     - TOXENV=pep8
     - TOXENV=coverage
 install:
-    - pip install tox
+    - pip install -r travis_requirements.txt
 script:
     - tox -e $TOXENV
