Move configuration to setup.cfg and use coverage instead of pytest-cov

--- a/tox.ini
+++ b/tox.ini
@@ -12,14 +12,14 @@ deps = -efile:{toxinidir}/src/reg#egg=reg
        -r{toxinidir}/requirements/fixtures.txt
 
 commands =
-     py.test morepath {posargs}
+     py.test {posargs}
 
 [testenv:pep8]
 basepython = python3.5
 deps = -e{toxinidir}[pep8]
 usedevelop = False
 
-commands = flake8 --show-source morepath setup.py
+commands = flake8 morepath setup.py
 
 [testenv:coverage]
 basepython = python3.5
@@ -27,8 +27,8 @@ deps = {[testenv]deps}
        -e{toxinidir}[coverage]
 
 commands =
-    coverage run --source morepath -m py.test morepath {posargs}
-    coverage report -m --fail-under=100
+    coverage run -m py.test {posargs}
+    coverage report --fail-under=100
 
 [testenv:docs]
 basepython = python3.5
@@ -39,15 +39,8 @@ deps = -efile:{toxinidir}/src/reg#egg=reg
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
-
 [testenv:freeze]
 basepython = python3.5
 deps = {[testenv]deps}
 
 commands = pip freeze
-
-[flake8]
-ignore = N801
-
-[pytest]
-testpaths = morepath
