Use a seperate tox.ini file for Travis

--- a/.travis-tox.ini
+++ b/.travis-tox.ini
@@ -1,3 +1,5 @@
+# This is the configuration file for tox used by Travis CI
+
 [tox]
 envlist = py27,pypy,py33,py34,py35,pep8,coverage,docs
 skipsdist = True
@@ -5,7 +7,9 @@ skip_missing_interpreters = True
 
 [testenv]
 usedevelop = True
-deps = -e{toxinidir}[test]
+deps = git+https://github.com/morepath/reg.git
+       git+https://github.com/morepath/dectate.git
+       -e{toxinidir}[test]
        -e{toxinidir}/fixture_packages/base
        -e{toxinidir}/fixture_packages/sub
        -e{toxinidir}/fixture_packages/no_mp
@@ -36,7 +40,9 @@ commands =
 
 [testenv:docs]
 basepython = python3.5
-deps = -e{toxinidir}[docs]
+deps = git+https://github.com/morepath/reg.git
+       git+https://github.com/morepath/dectate.git
+       -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
