--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ sudo: false
 language: python
 
 python: 3.5
-cache: pip
 env:
     - TOXENV=py27
     - TOXENV=py33
@@ -13,6 +12,7 @@ env:
     - TOXENV=pep8
     - TOXENV=coverage
 install:
-    - pip install -r travis_requirements.txt
+    - pip install --upgrade pip setuptools
+    - pip install tox
 script:
-    - tox -e $TOXENV
+    - tox -c .travis-tox.ini -e $TOXENV
