Clean up requirements

--- a/.travis-tox.ini
+++ b/.travis-tox.ini
@@ -7,18 +7,9 @@ skip_missing_interpreters = True
 
 [testenv]
 usedevelop = True
-deps = git+https://github.com/morepath/reg.git
-       git+https://github.com/morepath/dectate.git
+deps = -r{toxinidir}/requirements/corelibs.txt
        -e{toxinidir}[test]
-       -e{toxinidir}/fixture_packages/base
-       -e{toxinidir}/fixture_packages/sub
-       -e{toxinidir}/fixture_packages/no_mp
-       -e{toxinidir}/fixture_packages/no_mp_sub
-       -e{toxinidir}/fixture_packages/ns
-       -e{toxinidir}/fixture_packages/no_mp_ns
-       -e{toxinidir}/fixture_packages/ns2
-       -e{toxinidir}/fixture_packages/entry-point
-       -e{toxinidir}/fixture_packages/under_score
+       -r{toxinidir}/requirements/fixtures.txt
 commands =
      py.test morepath {posargs}
 
@@ -40,8 +31,7 @@ commands =
 
 [testenv:docs]
 basepython = python3.5
-deps = git+https://github.com/morepath/reg.git
-       git+https://github.com/morepath/dectate.git
+deps = -r{toxinidir}/requirements/corelibs.txt
        -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
