--- a/tox.ini
+++ b/tox.ini
@@ -6,15 +6,7 @@ skip_missing_interpreters = True
 [testenv]
 usedevelop = True
 deps = -e{toxinidir}[test]
-       -e{toxinidir}/fixture_packages/base
-       -e{toxinidir}/fixture_packages/sub
-       -e{toxinidir}/fixture_packages/no_mp
-       -e{toxinidir}/fixture_packages/no_mp_sub
-       -e{toxinidir}/fixture_packages/ns
-       -e{toxinidir}/fixture_packages/no_mp_ns
-       -e{toxinidir}/fixture_packages/ns2
-       -e{toxinidir}/fixture_packages/entry-point
-       -e{toxinidir}/fixture_packages/under_score
+       -r{toxinidir}/requirements/fixtures.txt
 commands =
      py.test morepath {posargs}
 
