--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,8 @@ skip_missing_interpreters = True
 
 [testenv]
 usedevelop = True
-deps = -e{toxinidir}[test]
+deps = -r{toxinidir}/requirements/src.txt
+       -e{toxinidir}[test]
        -r{toxinidir}/requirements/fixtures.txt
 commands =
      py.test morepath {posargs}
@@ -28,7 +29,8 @@ commands =
 
 [testenv:docs]
 basepython = python3.5
-deps = -e{toxinidir}[docs]
+deps = -r{toxinidir}/requirements/src.txt
+       -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
