Fix tox with local editable deps and add optional freeze testenv

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,12 @@ skip_missing_interpreters = True
 
 [testenv]
 usedevelop = True
-deps = -r{toxinidir}/requirements/src.txt
+deps = -efile:{toxinidir}/src/reg#egg=reg
+       -efile:{toxinidir}/src/dectate#egg=dectate
+       -efile:{toxinidir}/src/importscan#egg=importscan
        -e{toxinidir}[test]
        -r{toxinidir}/requirements/fixtures.txt
+
 commands =
      py.test morepath {posargs}
 
@@ -29,10 +32,19 @@ commands =
 
 [testenv:docs]
 basepython = python3.5
-deps = -r{toxinidir}/requirements/src.txt
+deps = -efile:{toxinidir}/src/reg#egg=reg
+       -efile:{toxinidir}/src/dectate#egg=dectate
+       -efile:{toxinidir}/src/importscan#egg=importscan
        -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
+
+
+[testenv:freeze]
+basepython = python3.5
+deps = {[testenv]deps}
+
+commands = pip freeze
 
 [flake8]
 ignore = N801
