Use pytest-cov again instead of coverage

--- a/tox.ini
+++ b/tox.ini
@@ -27,8 +27,7 @@ deps = {[testenv]deps}
        -e{toxinidir}[coverage]
 
 commands =
-    coverage run -m py.test {posargs}
-    coverage report --fail-under=100
+    py.test --cov --cov-fail-under=100 {posargs}
 
 [testenv:docs]
 basepython = python3.5
