--- a/.travis_tox.ini
+++ b/.travis_tox.ini
@@ -8,13 +8,13 @@ deps = -r{toxinidir}/requirements/corelibs.txt
        -e{toxinidir}[test]
        -r{toxinidir}/requirements/fixtures.txt
 commands =
-     py.test morepath {posargs}
+     py.test {posargs}
 
 [testenv:pep8]
 basepython = python3.5
 deps = -e{toxinidir}[pep8]
 
-commands = flake8 --show-source morepath setup.py
+commands = flake8 morepath setup.py
 
 [testenv:coverage]
 basepython = python3.5
@@ -22,8 +22,7 @@ deps = {[testenv]deps}
        -e{toxinidir}[coverage]
 
 commands =
-    coverage run --source morepath -m py.test morepath {posargs}
-    coverage report -m --fail-under=100
+    py.test --cov --cov-fail-under=100 {posargs}
 
 [testenv:docs]
 basepython = python3.5
@@ -31,9 +30,3 @@ deps = -r{toxinidir}/requirements/corelibs.txt
        -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
-
-[flake8]
-ignore = N801
-
-[pytest]
-testpaths = morepath
