Extract src deps to a seperate section

--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,14 @@ envlist = py27,pypy,py33,py34,py35,pep8,coverage,docs
 skipsdist = True
 skip_missing_interpreters = True
 
-[testenv]
-usedevelop = True
+[src]
 deps = -efile:{toxinidir}/src/reg#egg=reg
        -efile:{toxinidir}/src/dectate#egg=dectate
        -efile:{toxinidir}/src/importscan#egg=importscan
+
+[testenv]
+usedevelop = True
+deps = {[src]deps}
        -e{toxinidir}[test]
        -r{toxinidir}/requirements/fixtures.txt
 
@@ -31,9 +34,7 @@ commands =
 
 [testenv:docs]
 basepython = python3.5
-deps = -efile:{toxinidir}/src/reg#egg=reg
-       -efile:{toxinidir}/src/dectate#egg=dectate
-       -efile:{toxinidir}/src/importscan#egg=importscan
+deps = {[src]deps}
        -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
