Use extras directly in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -10,37 +10,34 @@ deps = -efile:{toxinidir}/src/reg#egg=reg
 
 [testenv]
 usedevelop = True
+extras = test
 deps = {[src]deps}
-       -e{toxinidir}[test]
        -r{toxinidir}/requirements/fixtures.txt
 
-commands =
-     py.test {posargs}
+commands = py.test {posargs}
 
 [testenv:pep8]
 basepython = python3.5
-deps = -e{toxinidir}[pep8]
-usedevelop = False
+extras = pep8
+deps =
 
 commands = flake8 morepath setup.py
 
 [testenv:coverage]
 basepython = python3.5
-deps = {[testenv]deps}
-       -e{toxinidir}[coverage]
+extras = test
+         coverage
 
-commands =
-    py.test --cov --cov-fail-under=100 {posargs}
+commands = py.test --cov --cov-fail-under=100 {posargs}
 
 [testenv:docs]
 basepython = python3.5
+extras = docs
 deps = {[src]deps}
-       -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
 [testenv:freeze]
 basepython = python3.5
-deps = {[testenv]deps}
 
 commands = pip freeze
