Setting minimum version for tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,5 @@
 [tox]
+minversion = 2.4.1
 envlist = py27,pypy,py33,py34,py35,pep8,coverage,docs
 skipsdist = True
 skip_missing_interpreters = True
