--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,22 @@
 sudo: false
 language: python
 
-python: 3.5
-env:
-    - TOXENV=py27
-    - TOXENV=py33
-    - TOXENV=py34
-    - TOXENV=py35
-    - TOXENV=pypy
-    - TOXENV=docs
-    - TOXENV=pep8
-    - TOXENV=coverage
+python:
+    - "2.7"
+    - "pypy"
+    - "3.4"
+    - "3.5"
+    - "3.6"
+matrix:
+    include:
+    - python: "3.5"
+      env: TOXENV="-e docs"
+    - python: "3.5"
+      env: TOXENV="-e pep8"
+    - python: "3.5"
+      env: TOXENV="-e coverage"
 install:
     - pip install --upgrade pip setuptools
-    - pip install tox
+    - pip install tox-travis
 script:
-    - tox -c .travis_tox.ini -e $TOXENV
+    - tox -c .travis_tox.ini $TOXENV
