Adds Python 3.7 as a test target

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: false
+dist: xenial
 language: python
 
 python:
@@ -7,6 +8,7 @@ python:
     - "3.4"
     - "3.5"
     - "3.6"
+    - "3.7"
 matrix:
     include:
     - python: "3.5"
