Fixes pypy tests on Travis, adds pypy3 as a test target

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 2.4.1
-envlist = py27,pypy,py34,py35,py36,py37,pep8,coverage,docs
+envlist = py27,pypy,pypy3,py34,py35,py36,py37,pep8,coverage,docs
 skipsdist = True
 skip_missing_interpreters = True
 
