--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,13 @@ language: python
 
 python:
     - "2.7"
-    - "pypy"
     - "3.4"
     - "3.5"
     - "3.6"
     - "3.7"
+
+    - "pypy2.7-6.0"
+    - "pypy3.5-6.0"
 matrix:
     include:
     - python: "3.5"
