Remove support for Python 2, add Pypy 3 and make Python 3.7 the default

--- a/.travis_tox.ini
+++ b/.travis_tox.ini
@@ -1,7 +1,7 @@
 # This is the configuration file for tox used by Travis CI
 
 [tox]
-envlist = py27,pypy,py34,py35,py36,pep8,coverage,docs
+envlist = py34, py35, py36, py37, pypy3, pep8, coverage, docs
 
 [testenv]
 deps = -r{toxinidir}/requirements/corelibs.txt
@@ -11,13 +11,13 @@ commands =
      py.test {posargs}
 
 [testenv:pep8]
-basepython = python3.5
+basepython = python3.7
 deps = -e{toxinidir}[pep8]
 
 commands = flake8 morepath setup.py
 
 [testenv:coverage]
-basepython = python3.5
+basepython = python3.7
 deps = {[testenv]deps}
        -e{toxinidir}[coverage]
 
@@ -25,7 +25,7 @@ commands =
     py.test --cov --cov-fail-under=100 {posargs}
 
 [testenv:docs]
-basepython = python3.5
+basepython = python3.7
 deps = -r{toxinidir}/requirements/corelibs.txt
        -e{toxinidir}[docs]
 
