--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-minversion = 2.4.1
-envlist = py27,pypy,pypy3,py34,py35,py36,py37,pep8,coverage,docs
+envlist = py34, py35, py36, py37, pypy3, pep8, coverage, docs
 skipsdist = True
 skip_missing_interpreters = True
 
@@ -18,27 +17,27 @@ deps = {[src]deps}
 commands = py.test {posargs}
 
 [testenv:pep8]
-basepython = python3.5
+basepython = python3.7
 extras = pep8
 deps =
 
 commands = flake8 morepath setup.py
 
 [testenv:coverage]
-basepython = python3.5
+basepython = python3.7
 extras = test
          coverage
 
 commands = py.test --cov --cov-fail-under=100 {posargs}
 
 [testenv:docs]
-basepython = python3.5
+basepython = python3.7
 extras = docs
 deps = {[src]deps}
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
 [testenv:freeze]
-basepython = python3.5
+basepython = python3.7
 
 commands = pip freeze
