Add Python 3.8 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py34, py35, py36, py37, pypy3, pep8, coverage, docs
+envlist = py34, py35, py36, py37, py38, pypy3, pep8, coverage, docs
 skipsdist = True
 skip_missing_interpreters = True
 
