Add corelibs.txt to pep8 deps in .travis_tox.ini

--- a/.travis_tox.ini
+++ b/.travis_tox.ini
@@ -12,7 +12,8 @@ commands =
 
 [testenv:pep8]
 basepython = python3.7
-deps = -e{toxinidir}[pep8]
+deps = -r{toxinidir}/requirements/corelibs.txt
+       -e{toxinidir}[pep8]
 
 commands = flake8 morepath setup.py
 
