Fix pep8 deps in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands = py.test {posargs}
 [testenv:pep8]
 basepython = python3.7
 extras = pep8
-deps =
+deps = {[src]deps}
 
 commands = flake8 morepath setup.py
 
