Add integration for the Black code formatter

--- a/.travis_tox.ini
+++ b/.travis_tox.ini
@@ -15,7 +15,8 @@ basepython = python3.7
 deps = -r{toxinidir}/requirements/corelibs.txt
        -e{toxinidir}[pep8]
 
-commands = flake8 morepath setup.py
+commands = flake8 morepath *.py
+           black --check .
 
 [testenv:coverage]
 basepython = python3.7
