--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,11 @@ pip-wheel-metadata
 /src/
 
 # Unit test / coverage reports
-.cache/
-.pytest_cache/
-/.coverage
-/htmlcov
-/.tox
+.cache
+.pytest_cache
+.coverage
+htmlcov
+.tox
 
 # Sphinx documentation
 /doc/build/
