--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,19 @@ pip-wheel-metadata
 
 # Virtualenv
 /env/
+/.venv/
+/venv/
 /src/
 
 # Unit test / coverage reports
-.cache/
-.pytest_cache/
-/.coverage
-/htmlcov
-/.tox
+.*cache
+.coverage
+htmlcov
+.tox
 
 # Sphinx documentation
 /doc/build/
+
+# Editor
+/.vscode/
+/.idea/
