--- a/.travis_tox.ini
+++ b/.travis_tox.ini
@@ -15,7 +15,7 @@ basepython = python3.7
 deps = -r{toxinidir}/requirements/corelibs.txt
        -e{toxinidir}[pep8]
 
-commands = flake8 morepath *.py
+commands = flake8
            black --check .
 
 [testenv:coverage]
