--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ basepython = python3.7
 extras = pep8
 deps = {[src]deps}
 
-commands = flake8 morepath *.py
+commands = flake8
            black --check .
 
 [testenv:coverage]
