Drop the dot https://twitter.com/pytestdotorg/status/753767547866972160

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ extras = test
 deps = {[src]deps}
        -r{toxinidir}/requirements/fixtures.txt
 
-commands = py.test {posargs}
+commands = pytest {posargs}
 
 [testenv:pep8]
 basepython = python3.7
@@ -29,7 +29,7 @@ basepython = python3.7
 extras = test
          coverage
 
-commands = py.test --cov --cov-fail-under=100 {posargs}
+commands = pytest --cov --cov-fail-under=100 {posargs}
 
 [testenv:docs]
 basepython = python3.7
