--- a/.travis_tox.ini
+++ b/.travis_tox.ini
@@ -8,7 +8,7 @@ deps = -r{toxinidir}/requirements/corelibs.txt
        -e{toxinidir}[test]
        -r{toxinidir}/requirements/fixtures.txt
 commands =
-     py.test {posargs}
+     pytest {posargs}
 
 [testenv:pep8]
 basepython = python3.7
@@ -24,7 +24,7 @@ deps = {[testenv]deps}
        -e{toxinidir}[coverage]
 
 commands =
-    py.test --cov --cov-fail-under=100 {posargs}
+    pytest --cov --cov-fail-under=100 {posargs}
 
 [testenv:docs]
 basepython = python3.7
