Drop support for EOL Python 3.4 and 3.5

--- a/.travis_tox.ini
+++ b/.travis_tox.ini
@@ -1,7 +1,7 @@
 # This is the configuration file for tox used by Travis CI
 
 [tox]
-envlist = py34, py35, py36, py37, py38, pypy3, pep8, coverage, docs
+envlist = py36, py37, py38, pypy3, pep8, coverage, docs
 
 [testenv]
 deps = -r{toxinidir}/requirements/corelibs.txt
