modernize CI setup
- use GitHub Actions for CI
- use pre-commit (flake8, black, pyugrade)
- add support for Python 3.9

--- a/.ci_tox.ini
+++ b/.ci_tox.ini
@@ -1,7 +1,7 @@
-# This is the configuration file for tox used by Travis CI
+# This is the configuration file for tox used by CI
 
 [tox]
-envlist = py36, py37, py38, pypy3, pep8, coverage, docs
+envlist = py36, py37, py38, py39, pypy3, pre-commit, coverage, docs
 
 [testenv]
 deps = -r{toxinidir}/requirements/corelibs.txt
@@ -10,16 +10,12 @@ deps = -r{toxinidir}/requirements/corelibs.txt
 commands =
      pytest {posargs}
 
-[testenv:pep8]
-basepython = python3.7
-deps = -r{toxinidir}/requirements/corelibs.txt
-       -e{toxinidir}[pep8]
-
-commands = flake8
-           black --check .
+[testenv:pre-commit]
+deps = pre-commit
+commands = pre-commit run --all-files
 
 [testenv:coverage]
-basepython = python3.7
+basepython = python3
 deps = {[testenv]deps}
        -e{toxinidir}[coverage]
 
@@ -27,8 +23,22 @@ commands =
     pytest --cov --cov-fail-under=100 {posargs}
 
 [testenv:docs]
-basepython = python3.7
+basepython = python3
 deps = -r{toxinidir}/requirements/corelibs.txt
        -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
+
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38, docs
+    3.9: py39, pre-commit, mypy, coverage
+
+[flake8]
+max-line-length = 88
+ignore =
+    E231  # clashes with black
+    W503
