--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-envlist = py36, py37, py38, pypy3, pep8, coverage, docs
+envlist = py36, py37, py38, py39, pypy3, pre-commit, coverage, docs
 skipsdist = True
 skip_missing_interpreters = True
 
 [src]
-deps = -efile:{toxinidir}/src/reg#egg=reg
-       -efile:{toxinidir}/src/dectate#egg=dectate
-       -efile:{toxinidir}/src/importscan#egg=importscan
+deps = -e file:{toxinidir}/src/reg#egg=reg
+       -e file:{toxinidir}/src/dectate#egg=dectate
+       -e file:{toxinidir}/src/importscan#egg=importscan
 
 [testenv]
 usedevelop = True
@@ -16,29 +16,33 @@ deps = {[src]deps}
 
 commands = pytest {posargs}
 
-[testenv:pep8]
-basepython = python3.7
-extras = pep8
-deps = {[src]deps}
-
-commands = flake8 morepath/ setup.py
-           black --check .
+[testenv:pre-commit]
+deps = pre-commit
+commands = pre-commit run --all-files
 
 [testenv:coverage]
-basepython = python3.7
+basepython = python3
 extras = test
          coverage
 
 commands = pytest --cov --cov-fail-under=100 {posargs}
 
 [testenv:docs]
-basepython = python3.7
+basepython = python3
 extras = docs
 deps = {[src]deps}
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
 [testenv:freeze]
-basepython = python3.7
+basepython = python3
 
 commands = pip freeze
+
+
+[flake8]
+max-line-length = 88
+ignore =
+    E231  # clashes with black
+    W503
+    E203  # clashes with black
