--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,9 @@ skipsdist = True
 skip_missing_interpreters = True
 
 [src]
-deps = -e file:{toxinidir}/src/reg#egg=reg
-       -e file:{toxinidir}/src/dectate#egg=dectate
-       -e file:{toxinidir}/src/importscan#egg=importscan
+deps = -e file:{toxinidir}/../reg#egg=reg
+       -e file:{toxinidir}/../dectate#egg=dectate
+       -e file:{toxinidir}/../importscan#egg=importscan
 
 [testenv]
 usedevelop = True
