--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,15 @@
 [tox]
-envlist = py36, py37, py38, py39, pypy3, pre-commit, coverage, docs
+envlist =
+    py36
+    py37
+    py38
+    py39
+    py310
+    py311
+    pypy3
+    pre-commit
+    coverage
+    docs
 skipsdist = True
 skip_missing_interpreters = True
 
